<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Licensed to STRATIO (C) under one or more contributor license agreements.
  ~ See the NOTICE file distributed with this work for additional information
  ~ regarding copyright ownership.  The STRATIO (C) licenses this file
  ~ to you under the Apache License, Version 2.0 (the
  ~ "License"); you may not use this file except in compliance
  ~ with the License.  You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.stratio</groupId>
        <artifactId>parent</artifactId>
        <version>0.3.1</version>
    </parent>

    <groupId>com.stratio.crossdata</groupId>
    <artifactId>crossdata-parent</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0-SNAPSHOT</version>
    <name>Stratio Crossdata Parent</name>
    <description>Stratio Crossdata parent</description>
    <url>http://stratio.github.io/crossdata/</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/Stratio/crossdata</url>
        <connection>scm:git:git:@github.com:Stratio/crossdata.git</connection>
        <developerConnection>scm:git:git@github.com:Stratio/crossdata.git
        </developerConnection>
        <tag>HEAD</tag>
    </scm>

    <issueManagement>
        <system>Jira</system>
        <url>https://crossdata.atlassian.net/</url>
    </issueManagement>

    <developers>
        <developer>
            <id>miguel0afd</id>
            <name>Miguel Angel Fernandez</name>
            <email>mafernandez at stratio dot com</email>
        </developer>
        <developer>
            <id>jjlopez</id>
            <name>Juanjo Lopez</name>
            <email>jjlopez at stratio dot com</email>
        </developer>
        <developer>
            <id>darroyo</id>
            <name>David Arroyo</name>
            <email>darroyo at stratio dot com</email>
        </developer>
        <developer>
            <id>lcisneros</id>
            <name>Luis Cisneros</name>
            <email>lcisneros at stratio dot com</email>
        </developer>
    </developers>

    <modules>
        <module>crossdata-ng</module>
        <module>crossdata-hive</module>
        <module>crossdata-cassandra</module>
        <module>crossdata-examples</module>
        <module>doc</module>
    </modules>

    <properties>
        <scala.group>2.10</scala.group>
        <scala.version>${scala.group}.4</scala.version>
        <scalatest.version>2.2.2</scalatest.version>
        <spark.version>1.4.1</spark.version>
        <scalatest.version>2.2.5</scalatest.version>
        <mapdb.version>1.0.8</mapdb.version>
        <coverage.data.dir>${project.build.outputDirectory}</coverage.data.dir>
        <config.version>1.2.1</config.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <outputFileName>stratio-crossdata</outputFileName>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.scala-lang</groupId>
                <artifactId>scala-library</artifactId>
                <version>${scala.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.spark</groupId>
                <artifactId>spark-sql_${scala.group}</artifactId>
                <version>${spark.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>

    <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.12</version>
        <scope>test</scope>
    </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src/main/scala</sourceDirectory>
        <testSourceDirectory>src/test/scala</testSourceDirectory>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.scala-tools</groupId>
                    <artifactId>maven-scala-plugin</artifactId>
                    <version>2.15.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.1</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <skip>true</skip>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <checkMultipleScalaVersions>false</checkMultipleScalaVersions>
                    <args>
                        <arg>-Xmax-classfile-name</arg>
                        <arg>130</arg>
                    </args>
                </configuration>
                <executions>
                    <execution>
                        <id>compile</id>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <phase>compile</phase>
                    </execution>
                    <execution>
                        <id>test-compile</id>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                        <phase>test-compile</phase>
                    </execution>
                    <execution>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <includes>
                        <include>**/*Suite.*</include>
                    </includes>
                    <argLine>
                        ${jacoco-UT-argline}
                        -XX:MaxPermSize=256m
                     </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <executions>
                    <execution>
                        <id>integration-test</id>
                        <goals>
                            <goal>integration-test</goal>
                        </goals>
                        <configuration>
                            <useSystemClassLoader>false</useSystemClassLoader>
                            <useManifestOnlyJar>true</useManifestOnlyJar>
                            <includes>
                                <include>**/integration/**/*IT.*</include>
                            </includes>
                            <argLine>
                                ${jacoco-IT-argline}
                                -Xmx1024m
                                -XX:MaxPermSize=256m
                            </argLine>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- <plugin>
                <groupId>org.scala-tools</groupId>
                <artifactId>maven-scala-plugin</artifactId>
                <executions>
                    <execution>
                        <id>scala-compile-first</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>add-source</goal>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>scala-test-compile</id>
                        <phase>process-test-resources</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.scalastyle</groupId>
                <artifactId>scalastyle-maven-plugin</artifactId>
                <version>0.7.0</version>
                <configuration>
                    <verbose>true</verbose>
                    <failOnViolation>true</failOnViolation>
                    <includeTestSourceDirectory>false</includeTestSourceDirectory>
                    <failOnWarning>false</failOnWarning>
                    <sourceDirectory>${basedir}/src/main/scala</sourceDirectory>
                    <testSourceDirectory>${basedir}/src/test/scala</testSourceDirectory>
                    <configLocation>scalastyle_config.xml</configLocation>
                    <outputFile>${basedir}/target/scalastyle-output.xml</outputFile>
                    <inputEncoding>${project.build.sourceEncoding}</inputEncoding>
                    <outputEncoding>${project.reporting.outputEncoding}</outputEncoding>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin> -->
        </plugins>
    </build>

</project>

